@@ -1,32 +1,24 @@
 <?php
 session_start();
-//Redirecionador de acesso não autorizado
-if (isset($_SESSION['tipodeusuario'])) {
-    if ($_SESSION['tipodeusuario'] != 'administrador') {
-        header('location: /vittaclinic2/index.php');
-    }
-} else {
-    header('location: /vittaclinic2/paginas/comum/entrar.php');
-}
 require 'C:\xampp\htdocs\vittaclinic2\sistema\conexao.php';
+require 'C:\xampp\htdocs\vittaclinic2\sistema\lib.php';
+filtroAcessoAdmin();
 ?>
 <!DOCTYPE html>
 <html lang="eng">
 <meta charset="UTF-8">
 <head>
     <title>VittaClinic</title>
+    <?php
+    seletorDeTemas();
+    ?>
 </head>
 <body>
     <a href="/vittaclinic2/index.php"><h1>Vitta.Clinic</h1></a>
     <p><h2>Administrador minha página.</h2></p>
-    <?php //Sistema que escreve o usuario.
-    if (isset($_SESSION['email'])) {
-        echo 'usuario: ' . $_SESSION['email'] . ' tipo: ' . $_SESSION['tipodeusuario'];
-    } else {
-        echo '<p><a href="/vittaclinic2/paginas/comum/entrar.php">Entrar/Registrar</a></p>';
-    }
+    <?php
+    escreverUsuarioEmailTipo();
     ?>
-    <p><a href="/vittaclinic2/paginas/comum/sair.php">Sair</a></p>
     <p>
     <h3>Cadastrar médicos</h3>
     <form method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>">
