@@ -2,13 +2,16 @@
 session_start();
 require 'C:\xampp\htdocs\vittaclinic2\sistema\conexao.php';
 require 'C:\xampp\htdocs\vittaclinic2\sistema\lib.php';
-filtroAcessoMedico();
+//Redirecionador de não usuario
+if (!isset($_SESSION['tipodeusuario'])) {
+    header('location: /vittaclinic2/paginas/comum/entrar.php');
+}
 ?>
 <!DOCTYPE html>
 <html lang="eng">
 <meta charset="UTF-8">
 <head>
-    <title>VittaClinic</title>
+    <title>Marque sua consulta</title>
     <?php
     seletorDeTemas();
     ?>  
@@ -18,6 +21,8 @@ filtroAcessoMedico();
     <?php
     escreverUsuarioEmailTipo();
     ?>
-    <p>Médico minha página.</p>
+    <p><h1>Marque sua consulta</h1></p>
+    <p>Aqui o usuario deve poder marcar consultas</p>
+    <p>Um médico não deve poder marcar consultas com si mesmo</p>
 </body>
 </html>
