@@ -1,0 +1,10 @@
+body {
+    background-color: rgb(0, 29, 54);
+    color: aliceblue;
+}
+a:link {
+    color: chocolate;
+}
+a:visited {
+    color: chocolate;
+}
